# cmake_sdl2_basic_project

./: CMakeLists.txt  main.cpp  res_path.h
